fe/src/app/globals.css
@import "tailwindcss";

@theme {
  /* Colors */
  --color-surface: #ffffff;
  --color-surface-dim: #cbdbf5;
  --color-surface-bright: #f8f9ff;
  --color-surface-container-lowest: #ffffff;
  --color-surface-container-low: #eff4ff;
  --color-surface-container: #e5eeff;
  --color-surface-container-high: #dce9ff;
  --color-surface-container-highest: #d3e4fe;
  --color-on-surface: #0f172a;
  --color-on-surface-variant: #64748b;
  --color-inverse-surface: #213145;
  --color-inverse-on-surface: #eaf1ff;
  --color-outline: #e2e8f0;
  --color-outline-variant: #c3c6d7;
  --color-surface-tint: #0053db;
  --color-primary: #2563eb;
  --color-on-primary: #ffffff;
  --color-primary-container: #2563eb;
  --color-on-primary-container: #eeefff;
  --color-inverse-primary: #b4c5ff;
  --color-secondary: #7c3aed;
  --color-on-secondary: #ffffff;
  --color-secondary-container: #8a4cfc;
  --color-on-secondary-container: #fffbff;
  --color-tertiary: #006329;
  --color-on-tertiary: #ffffff;
  --color-tertiary-container: #007f36;
  --color-on-tertiary-container: #c7ffca;
  --color-error: #ba1a1a;
  --color-on-error: #ffffff;
  --color-error-container: #ffdad6;
  --color-on-error-container: #93000a;
  --color-primary-fixed: #dbe1ff;
  --color-primary-fixed-dim: #b4c5ff;
  --color-on-primary-fixed: #00174b;
  --color-on-primary-fixed-variant: #003ea8;
  --color-secondary-fixed: #eaddff;
  --color-secondary-fixed-dim: #d2bbff;
  --color-on-secondary-fixed: #25005a;
  --color-on-secondary-fixed-variant: #5a00c6;
  --color-tertiary-fixed: #7ffc97;
  --color-tertiary-fixed-dim: #62df7d;
  --color-on-tertiary-fixed: #002109;
  --color-on-tertiary-fixed-variant: #005320;
  --color-background: #f8fafc;
  --color-on-background: #0f172a;
  --color-surface-variant: #d3e4fe;

  /* Typography */
  --font-sans: 'Inter', sans-serif;

  /* Spacing */
  --spacing-xs: 4px;
  --spacing-sm: 8px;
  --spacing-md: 16px;
  --spacing-lg: 24px;
  --spacing-xl: 32px;
  --spacing-2xl: 48px;
  --spacing-3xl: 64px;
  --spacing-container-max: 1280px;
  --spacing-gutter: 24px;
  --spacing-margin-mobile: 16px;

  /* Rounded corners */
  --radius-sm: 0.25rem;
  --radius-md: 0.75rem;
  --radius-lg: 1rem;
  --radius-xl: 1.5rem;
}

